Bug 51471 - [965gm] Corrupted graphics in corners of screen with pixel shaders enabled
Summary: [965gm] Corrupted graphics in corners of screen with pixel shaders enabled
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-27 04:05 UTC by Deve
Modified: 2013-02-13 18:22 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Edge of screen looks badly (48.66 KB, image/jpeg)
2012-06-27 04:05 UTC, Deve
Details
Edge of screen looks badly (45.56 KB, image/jpeg)
2012-06-27 04:06 UTC, Deve
Details
screenshot from mesa 9.0.1 (229.79 KB, text/plain)
2012-11-16 22:59 UTC, Deve
Details

Description Deve 2012-06-27 04:05:34 UTC
Created attachment 63509 [details]
Edge of screen looks badly

Attachment shows kind of problem. It displays sometimes on left or right edge of screen.

Problem is on mesa 8.0.3

Intel 965GM Chipset
intel driver: 2.19
mesa: 8.0.3
linux-image: 3.3.6 

On old mesa 7.11.2 it looks good.
Comment 1 Deve 2012-06-27 04:06:31 UTC
Created attachment 63510 [details]
Edge of screen looks badly
Comment 2 Eric Anholt 2012-08-13 05:44:27 UTC
note to self: Possibly failure at porting gen4 clipping workarounds to new VS backend?
Comment 3 Kenneth Graunke 2012-11-07 00:53:39 UTC
Well...the negative RHW workaround is definitely commented out in the new code, and that's specific to Broadwater and maybe Crestline, so that seems like a likely candidate...
Comment 4 Deve 2012-11-16 22:59:14 UTC
Created attachment 70176 [details]
screenshot from mesa 9.0.1

Now it looks like in attachment.
Comment 5 Deve 2012-11-22 10:21:46 UTC
To reproduce it:
 - download STK 0.8 
   http://sourceforge.net/projects/supertuxkart/files/SuperTuxKart/0.8alpha/
 - run game
 - run Story Mode
 - click one of cups on the map, for example this from screenshot

It shows usually, when edge of track is in corner of screen.
Comment 6 Deve 2012-12-23 21:48:26 UTC
You can see this bug also in other games. For example, today I had it in Half Life 2. So it's not problem only with STK.
Comment 7 Eric Anholt 2013-02-06 22:37:22 UTC
Trace at http://people.freedesktop.org/~anholt/supertuxkart.trace, shows the bug a few frames from the end on my GM965, but not on GM45 or IVB, so the gen4 clipper bug sounds likely.
Comment 8 Eric Anholt 2013-02-13 18:22:58 UTC
Thanks for the report!  (and sorry for leaving this regression around for so long)

commit cb4616d32dc85e60dba08d86581dbb0d6d1b7ffa
Author: Eric Anholt <eric@anholt.net>
Date:   Wed Feb 6 15:22:45 2013 -0800

    i965: Re-enable the -RHW workaround for original gen4 chips.
    
    Fixes broken clipping in supertuxkart and presumably many other applications
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=51471
    NOTE: Candidate for the stable branches.
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.